--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "0.0.37",
-    "@types/node": "^6",
+    "@types/node": "=6.0.65",
     "@polymer/tools-common": "^1.0.1",
     "chai": "^3.5.0",
     "clang-format": "=1.0.48",
