--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/parse5": "^2.2.33",
     "@types/request": "0.0.39",
     "@types/resolve": "0.0.4",
+    "@types/rimraf": "^0.0.28",
     "@types/semver": "^5.3.30",
     "@types/temp": "^0.8.28",
     "@types/uglify-js": "^2.6.28",
@@ -70,6 +71,7 @@
     "polymer-project-config": "^2.1.0",
     "polyserve": "^0.18.0",
     "request": "^2.72.0",
+    "rimraf": "^2.6.1",
     "semver": "^5.3.0",
     "tar-fs": "^1.12.0",
     "temp": "^0.8.3",
