--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/vinyl-fs": "0.0.28",
     "@types/yeoman-generator": "^1.0.0",
     "babel-core": "^6.17.0",
-    "babel-preset-babili": "0.0.10",
+    "babel-preset-babili": "^0.0.12",
     "babel-preset-es2015": "^6.18.0",
     "bower": "1.8.0",
     "bower-json": "^0.8.1",
