--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "command-line-usage": "^3.0.1",
     "css-slam": "^1.1.0",
     "del": "^2.2.2",
-    "dom5": "^2.0.1",
+    "dom5": "^2.3.0",
     "findup-sync": "^0.4.2",
     "github": "^7.2.1",
     "gulp-if": "^2.0.0",
@@ -84,12 +84,18 @@
     "@polymer/tools-common": "^1.0.1",
     "@types/fs-extra": "0.0.37",
     "@types/node": "=6.0.65",
+    "babel-cli": "^6.24.1",
+    "babili": "^0.0.12",
     "chai": "^3.5.0",
     "clang-format": "=1.0.48",
     "depcheck": "^0.6.3",
+    "execa": "^0.6.3",
     "fs-extra": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-run": "^1.7.1",
+    "gulp-spawn": "^0.4.0",
     "gulp-spawn-mocha": "^3.1.0",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.0.0",
