When compiling, inject babel helpers inline into index.html

--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@types/resolve": "0.0.4",
     "@types/semver": "^5.3.30",
     "@types/temp": "^0.8.28",
-    "@types/uglify-js": "^2.6.28",
     "@types/update-notifier": "^1.0.0",
     "@types/vinyl": "^2.0.0",
     "@types/vinyl-fs": "0.0.28",
@@ -102,11 +101,14 @@
     "istanbul": "^0.4",
     "memory-streams": "^0.1.0",
     "mocha": "^3.0",
+    "pump": "^1.0.2",
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
+    "stream-to-promise": "^2.2.0",
     "tmp": "0.0.31",
     "tslint": "^4.0.2",
     "typescript": "^2.2.0",
+    "uglifyjs": "^2.4.10",
     "vinyl-fs-fake": "^1.1.0",
     "yeoman-assert": "^2.2.1",
     "yeoman-test": "^1.1.0"
