--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/vinyl-fs": "0.0.28",
     "@types/yeoman-generator": "^1.0.0",
     "babel-core": "^6.17.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-babili": "0.0.10",
     "babel-preset-es2015": "^6.18.0",
     "bower": "1.8.0",
