--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "@types/resolve": "0.0.4",
     "@types/semver": "^5.3.30",
     "@types/temp": "^0.8.28",
-    "@types/uglify-js": "^2.6.28",
     "@types/update-notifier": "^1.0.0",
     "@types/vinyl": "^2.0.0",
     "@types/vinyl-fs": "0.0.28",
     "@types/yeoman-generator": "^1.0.0",
-    "babel-core": "^6.17.0",
+    "babel-core": "^6.24.1",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-babili": "0.0.10",
     "babel-preset-es2015": "^6.18.0",
     "bower": "1.8.0",
@@ -54,7 +54,7 @@
     "command-line-usage": "^3.0.1",
     "css-slam": "^1.1.0",
     "del": "^2.2.2",
-    "dom5": "^2.0.1",
+    "dom5": "^2.3.0",
     "findup-sync": "^0.4.2",
     "github": "^7.2.1",
     "gulp-if": "^2.0.0",
@@ -84,8 +84,9 @@
     "@polymer/tools-common": "^1.0.1",
     "@types/fs-extra": "0.0.37",
     "@types/node": "=6.0.65",
+    "babili": "^0.0.12",
     "chai": "^3.5.0",
-    "clang-format": "=1.0.48",
+    "clang-format": "=1.0.50",
     "depcheck": "^0.6.3",
     "fs-extra": "^2.0.0",
     "gulp": "^3.9.1",
@@ -101,6 +102,7 @@
     "tmp": "0.0.31",
     "tslint": "^4.0.2",
     "typescript": "^2.2.0",
+    "uglifyjs": "^2.4.10",
     "vinyl-fs-fake": "^1.1.0",
     "yeoman-assert": "^2.2.1",
     "yeoman-test": "^1.1.0"
