--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "merge-stream": "^1.0.1",
     "parse5": "^2.2.3",
     "plylog": "^0.4.0",
-    "polymer-analyzer": "2.0.0-alpha.42",
-    "polymer-build": "1.2.4",
+    "polymer-analyzer": "^2.0.0",
+    "polymer-build": "^1.2.5",
     "polymer-linter": "2.0.1",
     "polymer-project-config": "^3.0.0",
     "polyserve": "^0.19.0",
@@ -76,7 +76,7 @@
     "update-notifier": "^1.0.0",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
-    "web-component-tester": "^6.0.0-prerelease.9",
+    "web-component-tester": "^6.0.0",
     "yeoman-environment": "^1.5.2",
     "yeoman-generator": "^1.0.1"
   },
