Prepare v0.18.5 release of CLI (#739)
* Updated CHANGELOG, package.json and yarn.lock for analyzer 2.0.0 and wct 6.0.0 releases.
* Updated linter and other things.
* Goodbye uglifyjs, hello uglify-js.

--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
     "merge-stream": "^1.0.1",
     "parse5": "^2.2.3",
     "plylog": "^0.4.0",
-    "polymer-analyzer": "2.0.0-alpha.42",
-    "polymer-build": "1.2.4",
-    "polymer-linter": "2.0.1",
+    "polymer-analyzer": "^2.0.0",
+    "polymer-build": "^1.2.5",
+    "polymer-linter": "^2.0.2",
     "polymer-project-config": "^3.0.0",
     "polyserve": "^0.19.0",
     "request": "^2.72.0",
@@ -76,7 +76,7 @@
     "update-notifier": "^1.0.0",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
-    "web-component-tester": "^6.0.0-prerelease.9",
+    "web-component-tester": "^6.0.0",
     "yeoman-environment": "^1.5.2",
     "yeoman-generator": "^1.0.1"
   },
@@ -102,7 +102,7 @@
     "tmp": "0.0.31",
     "tslint": "^4.0.2",
     "typescript": "^2.2.0",
-    "uglifyjs": "^2.4.10",
+    "uglify-js": "^2.4.10",
     "vinyl-fs-fake": "^1.1.0",
     "yeoman-assert": "^2.2.1",
     "yeoman-test": "^1.1.0"
