--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/html-minifier": "^1.1.30",
     "@types/inquirer": "0.0.32",
     "@types/merge-stream": "^1.0.28",
+    "@types/mz": "^0.0.31",
     "@types/parse5": "^2.2.33",
     "@types/request": "0.0.39",
     "@types/resolve": "0.0.4",
@@ -62,12 +63,13 @@
     "html-minifier": "^3.0.1",
     "inquirer": "^1.0.2",
     "merge-stream": "^1.0.1",
+    "mz": "^2.6.0",
     "parse5": "^2.2.3",
     "plylog": "^0.4.0",
     "polymer-analyzer": "^2.0.0",
     "polymer-build": "^1.3.0",
     "polymer-linter": "^2.0.2",
-    "polymer-project-config": "^3.1.0",
+    "polymer-project-config": "^3.2.0",
     "polyserve": "^0.19.0",
     "request": "^2.72.0",
     "semver": "^5.3.0",
