Update application 1.x template

--- a/src/init/application/templates/polymer-1.x/bower.json
+++ b/src/init/application/templates/polymer-1.x/bower.json
@@ -4,12 +4,12 @@
 <% } -%>
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^1.9.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "web-component-tester": "^6.0.0-prerelease.5",
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   }
 }
