Update application 2.0 template

--- a/src/init/application/templates/polymer-2.x/bower.json
+++ b/src/init/application/templates/polymer-2.x/bower.json
@@ -4,10 +4,10 @@
 <% } -%>
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0-rc.3"
+    "polymer": "Polymer/polymer#^2.0.0"
   },
   "devDependencies": {
-    "web-component-tester": "^6.0.0-prerelease.5",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.7"
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   }
 }
