--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "parse5": "^2.2.3",
     "plylog": "^0.4.0",
     "polymer-analyzer": "^2.0.0",
-    "polymer-build": "1.4.0",
+    "polymer-build": "^1.4.0",
     "polymer-linter": "^2.0.2",
     "polymer-project-config": "^3.2.0",
     "polyserve": "^0.19.0",
