--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gulp-if": "^2.0.0",
     "gunzip-maybe": "^1.3.1",
     "html-minifier": "^3.0.1",
+    "ini": "^1.3.4",
     "inquirer": "^1.0.2",
     "merge-stream": "^1.0.1",
     "mz": "^2.6.0",
