Remove unecessary files from git templates (#682)
Several templates for the init command are stored on github:
- polymer-1-starter-kit
- polymer-2-starter-kit
- shop

These projects have several files that are not meant to be used by
consumers of the template:
- .travis.yml
- .github
- .gitattributes

This change removes those files post-clone.

Issues:
- #446
- #629
- #647

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/mz": "^0.0.31",
     "@types/request": "0.0.39",
     "@types/resolve": "0.0.4",
+    "@types/rimraf": "^0.0.28",
     "@types/semver": "^5.3.30",
     "@types/temp": "^0.8.28",
     "@types/update-notifier": "^1.0.0",
@@ -69,6 +70,7 @@
     "polymer-project-config": "^3.2.1",
     "polyserve": "^0.19.0",
     "request": "^2.72.0",
+    "rimraf": "^2.6.1",
     "semver": "^5.3.0",
     "tar-fs": "^1.12.0",
     "temp": "^0.8.3",
