--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gunzip-maybe": "^1.3.1",
     "html-minifier": "^3.0.1",
     "inquirer": "^1.0.2",
+    "matcher": "^1.0.0",
     "merge-stream": "^1.0.1",
     "mz": "^2.6.0",
     "plylog": "^0.4.0",
