--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "bower-json": "^0.8.1",
     "bower-logger": "^0.2.2",
     "chalk": "^1.1.3",
+    "chokidar": "^1.7.0",
     "command-line-args": "^3.0.0",
     "command-line-commands": "^1.0.3",
     "command-line-usage": "^3.0.1",
@@ -83,6 +84,7 @@
   },
   "devDependencies": {
     "@polymer/tools-common": "^1.0.1",
+    "@types/chokidar": "^1.7.3",
     "@types/fs-extra": "0.0.37",
     "@types/mocha": "^2.2.44",
     "@types/node": "=6.0.65",
