Use strict type checking.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,26 @@
 {
   "compilerOptions": {
+    // Targeted standard
     "target": "es6",
     "lib": [
       "es2017",
       "esnext.asynciterable"
     ],
+    // Module system
     "module": "commonjs",
     "moduleResolution": "node",
-    "isolatedModules": false,
-    "declaration": false,
-    "strictNullChecks": true,
-    "noImplicitAny": true,
+    // Strictness
+    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "skipLibCheck": true,
+    // Output
+    "sourceMap": true,
     "removeComments": false,
     "preserveConstEnums": true,
-    "suppressImplicitAnyIndexErrors": false,
+    "declaration": false,
     "outDir": "lib",
-    "rootDir": "src",
-    "sourceMap": true,
-    "skipLibCheck": true
+    "rootDir": "src"
   },
   "include": [
     "custom_typings/**/*.ts",
