--- a/package.json
+++ b/package.json
@@ -62,13 +62,14 @@
     "gunzip-maybe": "^1.3.1",
     "html-minifier": "^3.0.1",
     "inquirer": "^1.0.2",
+    "matcher": "^1.0.0",
     "merge-stream": "^1.0.1",
     "mz": "^2.6.0",
     "plylog": "^0.4.0",
     "polymer-analyzer": "^2.6.0",
     "polymer-build": "^2.1.0",
     "polymer-linter": "^2.2.0",
-    "polymer-project-config": "^3.4.0",
+    "polymer-project-config": "^3.8.1",
     "polyserve": "^0.23.0",
     "request": "^2.72.0",
     "rimraf": "^2.6.1",
