Fix ES5 template literals
This replaces the Babel transformation with unique variable
names for template literals.

Fixes #950

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/semver": "^5.3.30",
     "@types/temp": "^0.8.28",
     "@types/update-notifier": "^1.0.0",
+    "@types/uuid": "^3.4.3",
     "@types/vinyl": "^2.0.0",
     "@types/vinyl-fs": "0.0.28",
     "@types/yeoman-generator": "^1.0.0",
@@ -77,6 +78,7 @@
     "tar-fs": "^1.12.0",
     "temp": "^0.8.3",
     "update-notifier": "^1.0.0",
+    "uuid": "^3.2.1",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
     "web-component-tester": "^6.3.0",
