use analyzer and linter v3. Add resolvePath util.

--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     "merge-stream": "^1.0.1",
     "mz": "^2.6.0",
     "plylog": "^0.4.0",
-    "polymer-analyzer": "^2.6.0",
+    "polymer-analyzer": "^3.0.0-pre.12",
     "polymer-build": "^2.5.0",
-    "polymer-linter": "^2.2.0",
-    "polymer-project-config": "^3.10.0",
+    "polymer-linter": "^3.0.0-pre.2",
+    "polymer-project-config": "^3.8.1",
     "polyserve": "^0.25.2",
     "request": "^2.72.0",
     "rimraf": "^2.6.1",
@@ -69,6 +69,7 @@
     "temp": "^0.8.3",
     "update-notifier": "^1.0.0",
     "validate-element-name": "^2.1.1",
+    "url-js": "^0.2.1",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
     "web-component-tester": "^6.6.0-pre.3",
