--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "@types/yeoman-generator": "^1.0.0",
     "babel-core": "^6.24.1",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-minify": "0.2.0",
+    "babel-preset-minify": "^0.3.0",
     "bower": "1.8.2",
     "bower-json": "^0.8.1",
     "bower-logger": "^0.2.2",
@@ -92,7 +95,6 @@
     "@types/sinon": "^4.0.0",
     "@types/tmp": "^0.0.33",
     "@types/yeoman-test": "^1.7.3",
-    "babili": "^0.0.12",
     "chai": "^3.5.0",
     "clang-format": "=1.1.0",
     "depcheck": "^0.6.3",
