--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/chalk": "^0.4.31",
     "@types/del": "^3.0.0",
     "@types/findup-sync": "^0.3.29",
+    "@types/globby": "^6.1.0",
     "@types/gulp-if": "0.0.30",
     "@types/html-minifier": "^1.1.30",
     "@types/inquirer": "0.0.32",
@@ -62,6 +63,7 @@
     "del": "^3.0.0",
     "findup-sync": "^0.4.2",
     "github": "^7.2.1",
+    "globby": "^8.0.1",
     "gulp-if": "^2.0.0",
     "gunzip-maybe": "^1.3.1",
     "html-minifier": "^3.0.1",
