--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.3.0",
     "bower": "1.8.2",
     "bower-json": "^0.8.1",
@@ -83,8 +83,8 @@
     "tar-fs": "^1.12.0",
     "temp": "^0.8.3",
     "update-notifier": "^1.0.0",
-    "validate-element-name": "^2.1.1",
     "uuid": "^3.2.1",
+    "validate-element-name": "^2.1.1",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
     "web-component-tester": "^6.3.0",
