--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "validate-element-name": "^2.1.1",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
-    "web-component-tester": "6.6.0-pre.1",
+    "web-component-tester": "^6.6.0-pre.3",
     "yeoman-environment": "^1.5.2",
     "yeoman-generator": "^1.0.1"
   },
