--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "gulp build",
     "test": "gulp test lint",
     "test:smoke": "gulp test",
+    "test:smoke-lint": "gulp test lint",
     "test:integration": "gulp test:integration",
     "format": "find src gulpfile.js \\( -iname '*.ts' -o -iname '*.js' \\) -not -path '*fixtures*' | xargs clang-format --style=file -i"
   },
