--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
     "mz": "^2.6.0",
     "plylog": "^0.4.0",
     "polymer-analyzer": "^2.6.0",
-    "polymer-build": "^2.3.3",
+    "polymer-build": "^2.5.0",
     "polymer-linter": "^2.2.0",
     "polymer-project-config": "^3.10.0",
-    "polyserve": "^0.23.0",
+    "polyserve": "^0.25.2",
     "request": "^2.72.0",
     "rimraf": "^2.6.1",
     "semver": "^5.3.0",
@@ -71,7 +71,7 @@
     "validate-element-name": "^2.1.1",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
-    "web-component-tester": "^6.3.0",
+    "web-component-tester": "^6.6.0-pre.3",
     "yeoman-environment": "^1.5.2",
     "yeoman-generator": "^1.0.1"
   },
