Update to polymer-build v3

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "mz": "^2.6.0",
     "plylog": "^0.4.0",
     "polymer-analyzer": "^3.0.0-pre.14",
-    "polymer-build": "^2.5.0",
+    "polymer-build": "^3.0.0-pre.1",
     "polymer-linter": "^3.0.0-pre.3",
     "polymer-project-config": "^3.9.0",
     "polyserve": "^0.25.2",
@@ -70,6 +70,7 @@
     "temp": "^0.8.3",
     "update-notifier": "^1.0.0",
     "validate-element-name": "^2.1.1",
+    "uuid": "^3.2.1",
     "url-js": "^0.2.1",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
