Adapt to analyzer, build, linter v3 (#948)
* use analyzer and linter v3. Add resolvePath util.

* leverage urlLoader

* format filepath in logs

* update to latest analyzer & linter

* A few small changes:

* If we can't get a file path for a document we need to change,
  fail and don't write any changes.

* Improve the clarity of lint output. Specifically, counting
  the number of warnings fixed but not mentioning how many changes
  were made to each individual file, as the disparity is confusing.

* Initialize PackageUrlResolver both package dir and component dir.

* Update to polymer-build v3

* Add build-library string type cast.

* Update npm build test to use a bare module specifier.

Also disable the test of custom component directory with build, as custom component directories seem like they only make sense with reusable elements, not applications, and applications are the only packages we expect to be built. Yell at me if this is a wrong assumption.

* Update spelling of FsUrlLoader

* Drop unused deps.

* Fix hybrid-incompatible code in 1.0 element template.

* Update polymer-project-config constraint.

* Add a method to utils for getting a configured analyzer.

* Increase lint test timeout.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "gulp test lint",
     "test:smoke": "gulp test",
     "test:integration": "gulp test:integration",
-    "format": "find src gulpfile.js \\( -iname '*.ts' -o -iname '*.js' \\) -not -path '*fixtures*' | xargs clang-format --style=file -i"
+    "format": "find src gulpfile.js \\( -iname '*.ts' -o -iname '*.js' \\) -not -path '*fixtures*' | xargs clang-format --style=file -i",
+    "test:watch": "tsc-then -- mocha -c --ui tdd lib/test/integration/*_test.js lib/test/unit/*_test.js lib/test/unit/*/*_test.js"
   },
   "repository": {
     "type": "git",
@@ -57,9 +58,9 @@
     "merge-stream": "^1.0.1",
     "mz": "^2.6.0",
     "plylog": "^0.4.0",
-    "polymer-analyzer": "^2.6.0",
-    "polymer-build": "^2.5.0",
-    "polymer-linter": "^2.2.0",
+    "polymer-analyzer": "^3.0.0-pre.14",
+    "polymer-build": "^3.0.0-pre.1",
+    "polymer-linter": "^3.0.0-pre.3",
     "polymer-project-config": "^3.10.0",
     "polyserve": "^0.25.2",
     "request": "^2.72.0",
@@ -98,6 +99,7 @@
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.7",
     "tmp": "0.0.31",
+    "tsc-then": "^1.0.1",
     "tslint": "^4.0.2",
     "typescript": "^2.2.0",
     "vinyl-fs-fake": "^1.1.0",
