Integrate module bundling and AMD transform into CLI.

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "mz": "^2.6.0",
     "plylog": "^0.4.0",
     "polymer-analyzer": "^3.0.0-pre.18",
-    "polymer-build": "^3.0.0-pre.5",
+    "polymer-build": "^3.0.0-pre.6",
     "polymer-linter": "^3.0.0-pre.3",
     "polymer-project-config": "^3.12.0",
     "polyserve": "^0.25.2",
@@ -80,7 +80,7 @@
   "devDependencies": {
     "@polymer/tools-common": "^1.0.1",
     "@types/chokidar": "^1.7.3",
-    "@types/fs-extra": "0.0.37",
+    "@types/fs-extra": "^5.0.1",
     "@types/mocha": "^2.2.44",
     "@types/node": "=6.0.65",
     "@types/sinon": "^4.0.0",
@@ -89,7 +89,7 @@
     "chai": "^3.5.0",
     "clang-format": "=1.1.0",
     "depcheck": "^0.6.3",
-    "fs-extra": "^2.0.0",
+    "fs-extra": "^5.0.0",
     "gulp": "^3.9.1",
     "gulp-spawn-mocha": "^3.1.0",
     "gulp-tslint": "^7.0.1",
@@ -99,6 +99,7 @@
     "mocha": "^3.0",
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.7",
+    "source-map-support": "^0.5.4",
     "tmp": "0.0.31",
     "tsc-then": "^1.0.1",
     "tslint": "^4.0.2",
