--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "findup-sync": "^0.4.2",
     "github": "^7.2.1",
     "globby": "^8.0.1",
+    "gulp-if": "^2.0.2",
     "gunzip-maybe": "^1.3.1",
     "inquirer": "^1.0.2",
     "merge-stream": "^1.0.1",
