--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/findup-sync": "^0.3.29",
     "@types/globby": "^6.1.0",
     "@types/inquirer": "0.0.32",
+    "@types/is-windows": "^0.2.0",
     "@types/merge-stream": "^1.0.28",
     "@types/mz": "^0.0.31",
     "@types/request": "2.0.3",
@@ -56,6 +57,7 @@
     "globby": "^8.0.1",
     "gunzip-maybe": "^1.3.1",
     "inquirer": "^1.0.2",
+    "is-windows": "^1.0.2",
     "merge-stream": "^1.0.1",
     "mz": "^2.6.0",
     "plylog": "^0.4.0",
